i-love-you.html

--- a/i-love-you.html
+++ b/i-love-you.html
@@ -109,7 +109,6 @@
 
     .star { cursor: pointer; }
 
-    /* Additional twinkling stars around text */
     .sparkle { display:inline-block; margin:0 2px; color: #fff; text-shadow: 0 0 8px #fff, 0 0 16px #a088ff; }
   </style>
 </head>
@@ -158,6 +157,8 @@
       <p>✨ First shared dream — we looked at the stars and imagined forever.</p>
       <p>✨ First time we sent each other photos — like little sparks connecting our worlds.</p>
       <p>✨ First time we stayed up late talking about everything and nothing — a sky full of confessions.</p>
+      <p>✨ First virtual stargazing together — seeing the same sky made us feel closer.</p>
+      <p>✨ First surprise message that made my heart skip — a comet streaking across my day.</p>
     </div>
 
     <!-- Message Capsules -->
@@ -176,15 +177,6 @@
       <div id="night" class="hidden-note">Close your eyes. Pretend I'm whispering goodnight right beside you.</div>
     </div>
 
-    <!-- Quiz -->
-    <div class="section">
-      <h2>Fun Love Quiz</h2>
-      <p>Who said 'I love you' first?</p>
-      <button class="reveal-btn" onclick="alert('You did! But I caught up fast 😉')">Answer</button>
-      <p>What is our favorite constellation?</p>
-      <button class="reveal-btn" onclick="alert('Orion, just like our love shines in the night!')">Answer</button>
-    </div>
-
     <!-- Future Dreams -->
     <div class="section">
       <h2>Dreams I Want to Share With You</h2>
@@ -192,33 +184,17 @@
       <p>• Traveling somewhere quiet, just you and me.</p>
       <p>• Building small rituals—movie nights, late calls, love notes.</p>
       <p>• A future where the distance is only a memory.</p>
+      <p>• Our first real adventure together — exploring a city or countryside hand in hand.</p>
+      <p>• Creating our own traditions — maybe a secret handshake or nightly star message.</p>
     </div>
 
-    <!-- Poem -->
+    <!-- Sweet Paragraphs -->
     <div class="section">
-      <h2>A Poem for You</h2>
-      <p>Distance isn’t a wall.<br>
-      It’s the space where my love travels<br>
-      to reach you.<br><br>
-      Across the silent nights,<br>
-      Through the glow of a thousand stars,<br>
-      My heart whispers your name<br>
-      In every twinkle, in every shimmer.<br><br>
-      Even the galaxies apart cannot dim<br>
-      The light that binds us across time and space.<br>
-      In the quiet, in the vast dark,<br>
-      My love sails to you endlessly,<br>
-      Unbroken, infinite, eternal.<br><br>
-      And it always does.</p>
-    </div>
-
-    <!-- Hidden Notes -->
-    <div class="section">
-      <h2>Hidden Star Notes</h2>
-      <p>Hover over these little stars ✦ to reveal small secrets.</p>
-      <p>✦ <span class="star">You are my calm.</span></p>
-      <p>✦ <span class="star">You are my wish come true.</span></p>
-      <p>✦ <span class="star">You are the brightest part of my sky.</span></p>
+      <h2>Sweet Thoughts</h2>
+      <p>Every time I see a star, I think of you and the way you light up my heart even from afar. Your smile lingers in my mind like the gentle glow of the moon.</p>
+      <p>Even in silence, I feel our connection growing stronger with each passing day. The memories we've created together shine brighter than any constellation.</p>
+      <p>Whenever I close my eyes, I imagine holding your hand and feeling the warmth that only you bring. You make ordinary moments feel magical, and I carry them with me always.</p>
+      <p>Your voice is a melody I play in my mind during quiet nights. No distance can diminish the comfort and love I feel when I think of you.</p>
     </div>
 
     <!-- Press and Hold -->
@@ -240,10 +216,6 @@
 
   function showHold() { document.getElementById('holdmessage').style.display = 'block'; }
   function hideHold() { document.getElementById('holdmessage').style.display = 'none'; }
-</script>
-</body>
-</html>
-
 </script>
 </body>
 </html>
