i-love-you.html

--- a/i-love-you.html
+++ b/i-love-you.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>For You, Under Our Stars</title>
+  <title>For You, Beneath Our Stars</title>
   <style>
     body {
       margin: 0;
@@ -131,7 +131,7 @@
       <h2>My Love Letter to You</h2>
       <p>My dearest love,</p>
       <p>Since 24th August, when we first became 'us', every moment has felt like a constellation lighting up my life. I cherish every laugh, every soft word, every tiny star of memory we create together. You are my safe place, my constant light, and even across this distance, my heart reaches yours.</p>
-      <p>This website is a little corner of our universe—a reminder that love stretches farther than any miles and shines brighter than any night sky. I hope you feel me here, beneath every twinkling star, whispering that I love you endlessly.</p>
+      <p>This website is a little corner of our universe, a reminder that love stretches farther than any miles and shines brighter than any night sky. I hope you feel me here, beneath every twinkling star, whispering that I love you endlessly.</p>
       <p style="text-align:right; font-style:italic;">Always yours.</p>
     </div>
 
@@ -141,7 +141,7 @@
       <ul>
         <li>The way you make distance feel smaller than it is.</li>
         <li>Your laugh, which lights up galaxies.</li>
-        <li>How you care—gently, thoughtfully, deeply.</li>
+        <li>How you care gently, thoughtfully, deeply and reassurze me even through all my doubts.</li>
         <li>The comfort in your presence, even through a screen.</li>
         <li>Every small detail of you that feels like a star only I can see.</li>
       </ul>
@@ -151,30 +151,22 @@
     <div class="section">
       <h2>Our Constellation Timeline</h2>
       <p>✨ 24th August — The day we officially started dating.</p>
-      <p>✨ The day we first spoke — a star lit up in my sky.</p>
-      <p>✨ Our first joke — the moment I realised we shine the same way.</p>
-      <p>✨ First call that lasted all night — a meteor shower of laughter.</p>
-      <p>✨ First shared dream — we looked at the stars and imagined forever.</p>
-      <p>✨ First time we sent each other photos — like little sparks connecting our worlds.</p>
-      <p>✨ First time we stayed up late talking about everything and nothing — a sky full of confessions.</p>
-      <p>✨ First virtual stargazing together — seeing the same sky made us feel closer.</p>
-      <p>✨ First surprise message that made my heart skip — a comet streaking across my day.</p>
+      <p>✨ 25th August — First sleep call, listening to your soft breathing. (& discovering you snore)</p>
+      <p>✨ 4th September — First snaps, like little sparks connecting our worlds.</p>
+      <p>✨ Holidays of October — first talk, alot of sleep calls.</p>
     </div>
 
     <!-- Message Capsules -->
     <div class="section">
       <h2>Little Messages for Different Moments</h2>
       <button class="reveal-btn" onclick="toggleNote('morning')">Morning Message</button>
-      <div id="morning" class="hidden-note">Good morning, my love. Even the sunrise feels incomplete without you.</div>
+      <div id="morning" class="hidden-note">Good morning, my pretty boy. I hope you had a great night, and that the stars kept you safe through all your dreams.</div>
 
       <button class="reveal-btn" onclick="toggleNote('afternoon')">Afternoon Message</button>
-      <div id="afternoon" class="hidden-note">Thinking of you in this quiet afternoon, wishing you were near.</div>
-
-      <button class="reveal-btn" onclick="toggleNote('evening')">Evening Message</button>
-      <div id="evening" class="hidden-note">The stars are out; they remind me of you and every sparkle in your eyes.</div>
+      <div id="afternoon" class="hidden-note">Thinking of you in this quiet afternoon, wishing you were near (teleport pls).</div>
 
       <button class="reveal-btn" onclick="toggleNote('night')">Night Message</button>
-      <div id="night" class="hidden-note">Close your eyes. Pretend I'm whispering goodnight right beside you.</div>
+      <div id="night" class="hidden-note">Be a good  boy and close your eyes for me. Pretend I'm whispering goodnight right beside you. Holding you close, keeping you safe.</div>
     </div>
 
     <!-- Future Dreams -->
@@ -182,10 +174,10 @@
       <h2>Dreams I Want to Share With You</h2>
       <p>• Watching the stars together without a screen between us.</p>
       <p>• Traveling somewhere quiet, just you and me.</p>
-      <p>• Building small rituals—movie nights, late calls, love notes.</p>
+      <p>• Building small rituals like movie nights, late calls, love notes.</p>
       <p>• A future where the distance is only a memory.</p>
-      <p>• Our first real adventure together — exploring a city or countryside hand in hand.</p>
-      <p>• Creating our own traditions — maybe a secret handshake or nightly star message.</p>
+      <p>• Our first real adventure together, exploring a city or countryside hand in hand.</p>
+      <p>• Yes, I will let you play hot wheels on me and make you watch my fav movies.</p>
     </div>
 
     <!-- Sweet Paragraphs -->
@@ -194,14 +186,14 @@
       <p>Every time I see a star, I think of you and the way you light up my heart even from afar. Your smile lingers in my mind like the gentle glow of the moon.</p>
       <p>Even in silence, I feel our connection growing stronger with each passing day. The memories we've created together shine brighter than any constellation.</p>
       <p>Whenever I close my eyes, I imagine holding your hand and feeling the warmth that only you bring. You make ordinary moments feel magical, and I carry them with me always.</p>
-      <p>Your voice is a melody I play in my mind during quiet nights. No distance can diminish the comfort and love I feel when I think of you.</p>
+      <p>Your voice is a melody I play in my mind during quiet nights.</p>
     </div>
 
     <!-- Press and Hold -->
     <div class="section">
       <h2>Press and Hold</h2>
       <button class="reveal-btn" onmousedown="showHold()" onmouseup="hideHold()">Press</button>
-      <div id="holdmessage" class="hidden-note">I love you more than words can shape.</div>
+      <div id="holdmessage" class="hidden-note">I love you more than words can shape. (I win, shh, good boy, I win)</div>
     </div>
 
     <!-- Footer -->
