i-love-you.html

--- a/i-love-you.html
+++ b/i-love-you.html
@@ -129,9 +129,10 @@
     <!-- Love Letter -->
     <div class="section">
       <h2>My Love Letter to You</h2>
-      <p>My dearest love,</p>
-      <p>Since 24th August, when we first became 'us', every moment has felt like a constellation lighting up my life. I cherish every laugh, every soft word, every tiny star of memory we create together. You are my safe place, my constant light, and even across this distance, my heart reaches yours.</p>
+      <p>My dearest angel,</p>
+      <p>Since the 24th August, when we first became 'us', every moment has felt like a constellation lighting up my life. I cherish every laugh, every soft word, every tiny star of memory we create together. You are my safe place, my constant light, and even across this distance, my heart reaches yours.</p>
       <p>This website is a little corner of our universe, a reminder that love stretches farther than any miles and shines brighter than any night sky. I hope you feel me here, beneath every twinkling star, whispering that I love you endlessly.</p>
+      <p>I wanted to make you a gift you could go back to whenever you felt sad or even when you wanted to. So here it is, I struggle to code html but I gladly did for you and it took alot of time. I hope it made you happy xx.</p>
       <p style="text-align:right; font-style:italic;">Always yours.</p>
     </div>
 
@@ -194,6 +195,9 @@
       <h2>Press and Hold</h2>
       <button class="reveal-btn" onmousedown="showHold()" onmouseup="hideHold()">Press</button>
       <div id="holdmessage" class="hidden-note">I love you more than words can shape. (I win, shh, good boy, I win)</div>
+    
+      <button class="reveal-btn" onmousedown="showHold()" onmouseup="hideHold()">Press</button>
+      <div id="holdmessage" class="hidden-note">Liam is grateful to have you as his dad and Stella is happy i found the love of my life even if you hate her.</div>
     </div>
 
     <!-- Footer -->
