i-love-you.html

--- a/i-love-you.html
+++ b/i-love-you.html
@@ -194,10 +194,7 @@
     <div class="section">
       <h2>Press and Hold</h2>
       <button class="reveal-btn" onmousedown="showHold()" onmouseup="hideHold()">Press</button>
-      <div id="holdmessage" class="hidden-note">I love you more than words can shape. (I win, shh, good boy, I win)</div>
-    
-      <button class="reveal-btn" onmousedown="showHold()" onmouseup="hideHold()">Press</button>
-      <div id="holdmessage" class="hidden-note">Liam is grateful to have you as his dad and Stella is happy i found the love of my life even if you hate her.</div>
+      <div id="holdmessage" class="hidden-note">I love you more than words can shape. (I win, shh, good boy, I win) Liam is grateful to have you as his dad and Stella is happy i found the love of my life even if you hate her.</div>
     </div>
 
     <!-- Footer -->
