--- a/index.html
+++ b/index.html
@@ -132,7 +132,10 @@
       <p>My dearest angel,</p>
       <p>Since the 24th August, when we first became 'us', every moment has felt like a constellation lighting up my life. I cherish every laugh, every soft word, every tiny star of memory we create together. You are my safe place, my constant light, and even across this distance, my heart reaches yours.</p>
       <p>This website is a little corner of our universe, a reminder that love stretches farther than any miles and shines brighter than any night sky. I hope you feel me here, beneath every twinkling star, whispering that I love you endlessly.</p>
-      <p>I wanted to make you a gift you could go back to whenever you felt sad or even when you wanted to. So here it is, I struggle to code html but I gladly did for you and it took alot of time. I hope it made you happy xx.</p>
+      <p>I wanted to make you a gift you could go back to whenever you felt sad or even when you wanted to. So here it is, I struggle to code html but I gladly did for you and it took alot of time. I hope it made you happy.</p>
+      <p>I understand that it's hard with your family, but never forget that you aren't and never are alone in this. From the day we met, to my last breath, you'll always have my shoulder to lean onto whenever everything feels too hard and i'm never giving up on you.</p>
+      <p>On the 24th of August 2025, I decided to ask you out, and i've never been so happy to ask someone out. I want you to be my one and only love for the rest of my life (apart from Stella and Liam xoxo).</p>
+      <p>I promise you, that i won't ever leave or replace you (I pinky promise). You're not the problem and none of it is your fault, my angel. I love you til death do us apart, and I'm so proud of you for everything Lucas.</p>
       <p style="text-align:right; font-style:italic;">Always yours.</p>
     </div>
 
