--- a/index.html
+++ b/index.html
@@ -197,9 +197,8 @@
 
       <button class="reveal-btn" onclick="toggleNote('night')">Night text</button>
       <div id="night" class="hidden-note">As you lay down tonight, I hope you feel the quiet presence of my love beside you. The world may have been loud, tiring, or even a little unfair today, but now it’s time for rest. Let your mind drift and your body soften. Let the stars above remind you that even the dark has beauty, just as our quiet moments together have their own magic. Close your eyes and imagine my arms around you. Let them carry away any worries you couldn’t set down earlier. Sleep is not just an escape; it’s a gentle reset for a heart as hardworking and kind as yours. Remember, no matter what the day brought, you are loved more than words could ever fully capture. Dream of the things that make your heart light and soft. Tomorrow will come, but for now, just be. I’ll be here, thinking of you, wishing you peace, whispering all the little ways you are cherished. Goodnight, my pretty boy. Sleep well.</div>
-    </div>
 
-      <button class="reveal-btn" onclick="toggleNote('night')">Read when you feel down/stressed</button>
+      <button class="reveal-btn" onclick="toggleNote('stressed')">Read when you feel down/stressed</button>
       <div id="night" class="hidden-note">I can feel that things are heavy right now, and I want you to pause for a moment and breathe with me. You don’t have to carry everything perfectly, and you don’t have to face it alone. Let me remind you of what you sometimes forget: you are strong, capable, and loved beyond measure. Stress has a way of making the world feel bigger than it is, but I see you—the real you, the person who laughs too loudly, dreams too deeply, and cares too much. And that person is enough. You don’t need to fix everything, solve every problem, or be perfect. You just need to be you, and that is more than enough for me. If it helps, close your eyes, take a deep breath, and picture me holding your hand. Feel the tension leave your shoulders, even just a little, and know that whatever happens, you are not alone. I am here, loving you quietly but with all my heart, proud of you, and waiting to see you smile again.</div>
     </div>
 
@@ -236,13 +235,6 @@
       <p>Even in silence, I feel our connection growing stronger with each passing day. The memories we've created together shine brighter than any constellation.</p>
       <p>Whenever I close my eyes, I imagine holding your hand and feeling the warmth that only you bring. You make ordinary moments feel magical, and I carry them with me always.</p>
       <p>Your voice is a melody I play in my mind during quiet nights.</p>
-    </div>
-
-    <!-- Press and Hold -->
-    <div class="section">
-      <h2>Press and Hold</h2>
-      <button class="reveal-btn" onmousedown="showHold()" onmouseup="hideHold()">Press</button>
-      <div id="holdmessage" class="hidden-note">I love you more than words can shape. (I win, shh, good boy, I win) Liam is grateful to have you as his dad and Stella is happy i found the love of my life even if you hate her.</div>
     </div>
 
     <!-- Footer -->
