--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
       <p>• Yes, I will let you play hot wheels on me and make you watch my fav movies.</p>
     </div>
 
+    <!-- Our Story -->
     <div class="section">
       <h2>The Way You Changed My Sky</h2>
       <p>Before you, my sky was quiet in a way that felt empty.</p>
@@ -225,7 +226,7 @@
       <p>Not burning, not overwhelming, just constant. A soft glow that does not fade with distance. Even on days when I feel tired, unsure, or lost, thinking of you rearranges everything inside me. You do not fix my world or replace it. You simply make it warmer, safer, brighter, the way stars do when you finally learn how to see them.</p>
       <p>Now, when I imagine the future, I imagine it under a sky that looks different than it used to.</p>
       <p>One shaped by you. One where love does not rush or disappear, where it does not need to prove itself to exist. A sky where I always know where to look when I need grounding. A sky where, no matter how far apart we are, I always know where my heart belongs.</p>
-      <p style="text-align:right; font-style:italic;">You did not just change my sky. You gave it meaning.</p>
+      <p style="text-align:right; font-style:italic;">You did not just change my sky. You gave it a meaning.</p>
     </div>
   
     <!-- Sweet Paragraphs -->
